[gd_scene load_steps=3 format=3 uid="uid://mbta5e3hygij"]

[ext_resource type="Script" uid="uid://bfegegyfe3edg" path="res://scenes/dissapearingPlatform.gd" id="1_2grh0"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_t3muf"]
data = PackedVector3Array(-0.254742, -0.0952148, 0.84914, -0.254742, -0.0952148, -0.84914, -0.254742, 0.0952148, -0.84914, 0.254742, -0.0952148, -0.84914, -0.254742, -0.0952148, -0.84914, -0.254742, -0.0952148, 0.84914, -0.254742, 0.0952148, -0.84914, -0.254742, -0.0952148, -0.84914, 0.254742, -0.0952148, -0.84914, -0.254742, 0.0952148, -0.84914, -0.254742, 0.0952148, 0.84914, -0.254742, -0.0952148, 0.84914, -0.254742, -0.0952148, 0.84914, -0.254742, 0.0952148, 0.84914, 0.254742, 0.0952148, 0.84914, 0.254742, 0.0952148, 0.84914, -0.254742, 0.0952148, 0.84914, -0.254742, 0.0952148, -0.84914, -0.254742, -0.0952148, 0.84914, 0.254742, -0.0952148, 0.84914, 0.254742, -0.0952148, -0.84914, 0.254742, 0.0952148, 0.84914, 0.254742, -0.0952148, 0.84914, -0.254742, -0.0952148, 0.84914, 0.254742, -0.0952148, -0.84914, 0.254742, -0.0952148, 0.84914, 0.254742, 0.0952148, 0.84914, 0.254742, -0.0952148, -0.84914, 0.254742, 0.0952148, -0.84914, -0.254742, 0.0952148, -0.84914, -0.254742, 0.0952148, -0.84914, 0.254742, 0.0952148, -0.84914, 0.254742, 0.0952148, 0.84914, 0.254742, 0.0952148, 0.84914, 0.254742, 0.0952148, -0.84914, 0.254742, -0.0952148, -0.84914)

[node name="Stair" type="Node3D"]

[node name="Area3D" type="Area3D" parent="."]
script = ExtResource("1_2grh0")

[node name="Platform 8" type="CSGBox3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0978613, -0.00365829, -0.105369)
use_collision = true
size = Vector3(0.509483, 0.19043, 1.69828)

[node name="CSGBakedCollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.146349, 0.0759771, -0.0675926)
shape = SubResource("ConcavePolygonShape3D_t3muf")

[node name="Timer" type="Timer" parent="Area3D"]
one_shot = true

[node name="Timer2" type="Timer" parent="Area3D"]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Area3D" to="Area3D" method="_on_body_entered"]
[connection signal="timeout" from="Area3D/Timer" to="Area3D" method="_on_timer_timeout"]
[connection signal="timeout" from="Area3D/Timer2" to="Area3D" method="_on_timer_2_timeout"]
